--- a/Modelling.ipynb
+++ b/Modelling.ipynb
@@ -842,6 +842,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"metric.png\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -1112,7 +1119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Method1. Slight modification on vanilla RNN:\n",
+    "### Model 1. Slight modification on vanilla RNN:\n",
     "#### a. Change to mixed embedding and add other tabular features\n",
     "#### b. Use bidirectional RNN"
    ]
@@ -1323,9 +1330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Method2. Use very complex architecture \n",
-    "\n",
-    "#### Complex architecture 1\n",
+    "### Model 2. Complex architecture 1\n",
     "This is inspired by following discusssion \n",
     "https://mlwhiz.com/blog/2019/02/19/siver_medal_kaggle_learnings/"
    ]
@@ -1516,7 +1521,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Complex architecture 2\n",
+    "### Model 3. Complex architecture 2\n",
     "This is inspired by the following kernel:https://www.kaggle.com/thousandvoices/simple-lstm"
    ]
   },
@@ -1661,7 +1666,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1697,6 +1704,13 @@
    "metadata": {},
    "source": [
     "#### Based on above, I decided to choose model_r3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"finalmodel.png\">"
    ]
   },
   {
